--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,15 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
-
-jpa:
-  hibernate:
-    ddl-auto: create
-  properties:
+  jpa:
     hibernate:
-#      show_sql: true
-      format_sql: true
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
 logging:
-  level:
-    org.hibernate.sql: debug
+    level:
+      org.hibernate.sql: debug
+      org.hibernate.type: trace
